--- a/router/underlayproviders/afpacketudpip/BUILD.bazel
+++ b/router/underlayproviders/afpacketudpip/BUILD.bazel
@@ -32,8 +32,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_cilium_ebpf//:go_default_library",
-        "@com_github_cilium_ebpf//link:go_default_library",
         "@com_github_vishvananda_netlink//:go_default_library",
+        "@org_golang_x_sys//unix:go_default_library",
     ],
 )
 
