--- a/doc/requirements.in
+++ b/doc/requirements.in
@@ -7,3 +7,9 @@ sphinx-lint
 sphinx-rtd-theme
 sphinxcontrib-openapi
 sphinxcontrib-mermaid
+
+# Pinning the versions of the indirect requirements to fix Dependabot alerts.
+Jinja2 >= 3.1.6
+requests >= 2.32.0
+urllib3 >= 2.2.2
+h11 >= 0.16.0
