--- a/private/mgmtapi/tools/package.json
+++ b/private/mgmtapi/tools/package.json
@@ -25,7 +25,7 @@
             "redoc@~2.5.0": {
                 "dependencies": {
                     "call-me-maybe": "1.0.2",
-                    "yaml": "2.1.3",
+                    "yaml": ">=2.2.2",
                     "fast-safe-stringify": "2.1.1"
                 }
             }
