don't rename rules_go

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,8 +1,8 @@
 load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
 load("@buildifier_prebuilt//:rules.bzl", "buildifier")
 load("@gazelle//:def.bzl", "gazelle")
-load("@io_bazel_rules_go//go:def.bzl", "nogo")
 load("@npm//private/mgmtapi/tools:@stoplight/spectral-cli/package_json.bzl", spectral_bin = "bin")
+load("@rules_go//go:def.bzl", "nogo")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:nogo.bzl", "nogo_deps")
 load("//tools/lint:go_config.bzl", "go_lint_config")
