--- a/pkg/private/processmetrics/BUILD.bazel
+++ b/pkg/private/processmetrics/BUILD.bazel
@@ -9,56 +9,56 @@ go_library(
     importpath = "github.com/scionproto/scion/pkg/private/processmetrics",
     visibility = ["//visibility:public"],
     deps = select({
-        "@io_bazel_rules_go//go/platform:aix": [
+        "@rules_go//go/platform:aix": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:android": [
-            "//pkg/private/serrors:go_default_library",
-            "@com_github_prometheus_client_golang//prometheus:go_default_library",
-            "@com_github_prometheus_procfs//:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:darwin": [
-            "//pkg/private/serrors:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:dragonfly": [
-            "//pkg/private/serrors:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:freebsd": [
-            "//pkg/private/serrors:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:illumos": [
-            "//pkg/private/serrors:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:ios": [
-            "//pkg/private/serrors:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:js": [
-            "//pkg/private/serrors:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:linux": [
+        "@rules_go//go/platform:android": [
             "//pkg/private/serrors:go_default_library",
             "@com_github_prometheus_client_golang//prometheus:go_default_library",
             "@com_github_prometheus_procfs//:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:netbsd": [
+        "@rules_go//go/platform:darwin": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:openbsd": [
+        "@rules_go//go/platform:dragonfly": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:osx": [
+        "@rules_go//go/platform:freebsd": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:plan9": [
+        "@rules_go//go/platform:illumos": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:qnx": [
+        "@rules_go//go/platform:ios": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:solaris": [
+        "@rules_go//go/platform:js": [
             "//pkg/private/serrors:go_default_library",
         ],
-        "@io_bazel_rules_go//go/platform:windows": [
+        "@rules_go//go/platform:linux": [
+            "//pkg/private/serrors:go_default_library",
+            "@com_github_prometheus_client_golang//prometheus:go_default_library",
+            "@com_github_prometheus_procfs//:go_default_library",
+        ],
+        "@rules_go//go/platform:netbsd": [
+            "//pkg/private/serrors:go_default_library",
+        ],
+        "@rules_go//go/platform:openbsd": [
+            "//pkg/private/serrors:go_default_library",
+        ],
+        "@rules_go//go/platform:osx": [
+            "//pkg/private/serrors:go_default_library",
+        ],
+        "@rules_go//go/platform:plan9": [
+            "//pkg/private/serrors:go_default_library",
+        ],
+        "@rules_go//go/platform:qnx": [
+            "//pkg/private/serrors:go_default_library",
+        ],
+        "@rules_go//go/platform:solaris": [
+            "//pkg/private/serrors:go_default_library",
+        ],
+        "@rules_go//go/platform:windows": [
             "//pkg/private/serrors:go_default_library",
         ],
         "//conditions:default": [],
