Lintify and add back the full copyright notice.
The linter cannot be configured to accept either the full or abbrivated license.

--- a/private/underlay/ebpf/BUILD.bazel
+++ b/private/underlay/ebpf/BUILD.bazel
@@ -69,5 +69,8 @@ sh_test(
     name = "portfilter_test",
     testonly = True,
     srcs = ["portfilter_test_cap"],
-    tags = ["unit", "supports-graceful-termination"],
+    tags = [
+        "supports-graceful-termination",
+        "unit",
+    ],
 )
