replace impi with goimports

--- a/.golangcilint.yml
+++ b/.golangcilint.yml
@@ -5,6 +5,7 @@ linters:
     # Default linters.
     - forbidigo
     - errcheck
+    - goimports
     - gosimple
     - govet
     - ineffassign
@@ -54,6 +55,8 @@ linters-settings:
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.
+  goimports:
+    local-prefixes: github.com/scionproto/scion
 
 issues:
   exclude-rules:
