--- a/private/mgmtapi/tools/package.json
+++ b/private/mgmtapi/tools/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
-        "@redocly/cli": "1.0.2",
-        "@stoplight/spectral-cli": "^6.14.2"
+        "@redocly/cli": "1.34.3",
+        "@stoplight/spectral-cli": "^6.15.0"
     },
     "pnpm": {
         "overrides": {
@@ -17,13 +17,15 @@
             "@redocly/cli": {
                 "dependencies": {
                     "lodash.isequal": "4.5.0",
-                    "node-fetch": "2.6.7"
+                    "node-fetch": "2.6.7",
+                    "pluralize": "8.0.0",
+                    "@redocly/config": "0.20.1"
                 }
             },
-            "redoc@~2.0.0": {
+            "redoc@~2.5.0": {
                 "dependencies": {
                     "call-me-maybe": "1.0.2",
-                    "yaml": "2.1.3",
+                    "yaml": ">=2.2.2",
                     "fast-safe-stringify": "2.1.1"
                 }
             }
