--- a/router/underlayproviders/afpacketudpip/BUILD.bazel
+++ b/router/underlayproviders/afpacketudpip/BUILD.bazel
@@ -1,13 +1,13 @@
-load("//tools/lint:go.bzl", "go_library", "go_test")
+load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
     srcs = [
-        "fnv1acheap.go",
         "afpacketudpip.go",
+        "fnv1acheap.go",
         "mmsg.go",
     ],
-    importpath = "github.com/scionproto/scion/router/underlayproviders/udpip",
+    importpath = "github.com/scionproto/scion/router/underlayproviders/afpacketudpip",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/addr:go_default_library",
@@ -15,25 +15,19 @@ go_library(
         "//pkg/private/serrors:go_default_library",
         "//pkg/slayers:go_default_library",
         "//private/underlay/conn:go_default_library",
+        "//private/underlay/ebpf:go_default_library",
         "//router:go_default_library",
         "//router/bfd:go_default_library",
-    ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["udpip_test.go"],
-    embed = [":go_default_library"],
-    deps = [
-        "//pkg/addr:go_default_library",
-        "//pkg/private/serrors:go_default_library",
-        "//pkg/private/util:go_default_library",
-        "//pkg/scrypto:go_default_library",
-        "//pkg/slayers:go_default_library",
-        "//pkg/slayers/path:go_default_library",
-        "//pkg/slayers/path/scion:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-    ],
+        "@com_github_gopacket_gopacket//afpacket:go_default_library",
+        "@com_github_gopacket_gopacket//layers:go_default_library",
+    ] + select({
+        "@rules_go//go/platform:android": [
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@rules_go//go/platform:linux": [
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
