example test for the new logic with lots of todos

--- a/control/beaconing/BUILD.bazel
+++ b/control/beaconing/BUILD.bazel
@@ -59,6 +59,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//control/beacon:go_default_library",
+        "//control/beaconing/graph:go_default_library",
         "//control/beaconing/mock_beaconing:go_default_library",
         "//control/ifstate:go_default_library",
         "//pkg/addr:go_default_library",
