--- a/control/beacon/BUILD.bazel
+++ b/control/beacon/BUILD.bazel
@@ -44,6 +44,7 @@ go_test(
         ":go_default_library",
         "//control/beacon/mock_beacon:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/private/xtest/generated:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
