--- a/pkg/private/xtest/graph/BUILD.bazel
+++ b/pkg/private/xtest/graph/BUILD.bazel
@@ -3,8 +3,8 @@ load("@rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "default_gen.go",
         "graph.go",
+        "ifaceids.go",
     ],
     importpath = "github.com/scionproto/scion/pkg/private/xtest/graph",
     visibility = ["//visibility:public"],
