--- a/private/path/combinator/BUILD.bazel
+++ b/private/path/combinator/BUILD.bazel
@@ -37,6 +37,7 @@ go_test(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/private/xtest:go_default_library",
+        "//pkg/private/xtest/generated:go_default_library",
         "//pkg/private/xtest/graph:go_default_library",
         "//pkg/segment:go_default_library",
         "//pkg/segment/iface:go_default_library",
