extract links generation

--- a/pkg/private/xtest/graph/BUILD.bazel
+++ b/pkg/private/xtest/graph/BUILD.bazel
@@ -5,9 +5,11 @@ load("//tools/lint:write_source_files.bzl", "write_source_files")
 go_library(
     name = "go_default_library",
     srcs = [
+        "big_gen.go",
         "default_gen.go",
         "graph.go",
         "ifaceids.go",
+        "links_gen.go",
     ],
     importpath = "github.com/scionproto/scion/pkg/private/xtest/graph",
     visibility = ["//visibility:public"],
@@ -28,6 +30,14 @@ go_library(
 )
 
 genrule(
+    name = "generate_links",
+    srcs = [],
+    outs = ["links.gen.go"],
+    cmd = "$(location //pkg/private/xtest/graphupdater:graphupdater) -linksFile=$@",
+    tools = ["//pkg/private/xtest/graphupdater"],
+)
+
+genrule(
     name = "generate_default",
     srcs = ["//topology:default"],
     outs = ["default_gen.gen.go"],
@@ -38,9 +48,22 @@ genrule(
     tools = ["//pkg/private/xtest/graphupdater"],
 )
 
+genrule(
+    name = "generate_big",
+    srcs = ["//topology:big"],
+    outs = ["big_gen.gen.go"],
+    cmd = """
+        $(location //pkg/private/xtest/graphupdater:graphupdater) \
+        -topoFile=$(location //topology:big) -graphFile=$@ -descName=BigGraphDescription
+    """,
+    tools = ["//pkg/private/xtest/graphupdater"],
+)
+
 write_source_files(
     name = "write_files",
     files = {
+        "links_gen.go": ":generate_links",
         "default_gen.go": ":generate_default",
+        "big_gen.go": ":generate_big",
     },
 )
