--- a/pkg/private/xtest/graph/BUILD.bazel
+++ b/pkg/private/xtest/graph/BUILD.bazel
@@ -46,6 +46,7 @@ genrule(
         -topoFile=$(location //topology:big) -ifidsFile=$@
     """,
     tools = ["//pkg/private/xtest/graphupdater"],
+    visibility = ["//visibility:public"],
 )
 
 genrule(
