--- a/private/underlay/ebpf/BUILD.bazel
+++ b/private/underlay/ebpf/BUILD.bazel
@@ -13,7 +13,22 @@ genrule(
         "portfilter_bpfel.go",
         "portfilter_bpfel.o",
     ],
-    cmd = "GOPACKAGE=ebpf $(execpath @com_github_cilium_ebpf//cmd/bpf2go) -output-dir $$(dirname $(location portfilter_bpfel.go)) -tags linux portfilter $(location portfilter.c)",
+    cmd = """
+        ARCH=$$(uname -m)
+        if [ "$$ARCH" = "x86_64" ]; then
+            INC=/usr/include/x86_64-linux-gnu
+        elif [ "$$ARCH" = "aarch64" ]; then
+            INC=/usr/include/aarch64-linux-gnu
+        else
+            echo "Unsupported arch: $$ARCH" >&2
+            exit 1
+        fi
+        GOPACKAGE=ebpf $(execpath @com_github_cilium_ebpf//cmd/bpf2go) \
+            -output-dir $$(dirname $(location portfilter_bpfel.go)) \
+            -tags linux \
+            --cflags="-I$$INC" \
+            portfilter $(location portfilter.c)
+    """,
     tools = ["@com_github_cilium_ebpf//cmd/bpf2go"],
 )
 
