--- a/acceptance/topo_cs_reload/BUILD.bazel
+++ b/acceptance/topo_cs_reload/BUILD.bazel
@@ -31,7 +31,7 @@ go_test(
         "//private/topology:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
-        "@rules_go//go/tools/bazel:go_default_library",
+        "@rules_go//go/runfiles:go_default_library",
     ],
 )
 
