fix: remove systemd from the tutorial
even though on macOS the tutorial setup works just fine,
on Linux systemd is causing problems when running inside Docker,
presumably due to cgroup v2. Avoid using systemd and instead run
the SCION services from a shell script.

--- a/doc/tutorials/deploy/base/Dockerfile
+++ b/doc/tutorials/deploy/base/Dockerfile
@@ -5,10 +5,6 @@ ARG TARGETARCH
 ARG SCION_VER=0.12.0
 ARG RELEASE="https://github.com/scionproto/scion/releases/download/v${SCION_VER}/scion_${SCION_VER}_deb_${TARGETARCH}.tar.gz"
 
-# Tell systemd it's running inside Docker. Without this, systemd may emit warnings
-# and fail to boot certain units (especially networking-related).
-ENV container=docker
-
 # Force debconf (called by apt-get) to be non-interactive.
 # This prevents interactive prompts during package installation.
 ENV DEBIAN_FRONTEND=noninteractive
@@ -16,7 +12,6 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 
 # Install dependencies.
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    systemd libcap2-bin \
     curl wget tar ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
@@ -28,15 +23,6 @@ RUN mkdir -p /tmp/scion/ && \
     ls -l /tmp/scion/ && \
     apt-get install -y --no-install-recommends $(find /tmp/scion -name '*.deb') && \
     rm -rf /tmp/scion /var/lib/apt/lists/*
-
-# Copy systemd unit files
-COPY systemd/ /etc/systemd/system/
-
-# Enable required SCION services
-RUN systemctl enable scion-daemon.service \
-    scion-dispatcher.service \
-    scion-control@cs.service \
-    scion-router@br.service
 
 # Create SCION configuration directories.
 RUN mkdir -p \
@@ -59,3 +45,7 @@ RUN mv /tmp/tutorial-scion-certs/ISD15-B1-S1.trc /etc/scion/certs/
 
 # Persist the generated files.
 RUN mkdir -p /opt/tutorial-pki && mv /tmp/tutorial-scion-certs/* /opt/tutorial-pki/
+
+# Copy the initialization script.
+COPY start-scion.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/start-scion.sh
