Cleanup. Split the afp underlay in 4.
In passing. Fixed another missing space in router_multi test script.

--- a/router/underlayproviders/afpacketudpip/BUILD.bazel
+++ b/router/underlayproviders/afpacketudpip/BUILD.bazel
@@ -5,7 +5,10 @@ go_library(
     srcs = [
         "afpacketudpip.go",
         "fnv1acheap.go",
+        "internallink.go",
         "mmsg.go",
+        "ptplink.go",
+        "udpconnection.go",
     ],
     importpath = "github.com/scionproto/scion/router/underlayproviders/afpacketudpip",
     visibility = ["//visibility:public"],
