--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,6 +21,12 @@ linters:
     - unconvert
     - unused
   settings:
+    staticcheck:
+      checks:
+        - all
+        - "-QF1001" # disable "Apply De Morgan's law".
+        # The use of Go ideomatic identifiers is a recommendation, not a law.
+        - "-ST1003" # disable "Poorly chosen identifier".
     errcheck:
       exclude-functions:
         - (*github.com/spf13/cobra.Command).MarkFlagRequired
