--- a/router/underlayproviders/afpacketudpip/BUILD.bazel
+++ b/router/underlayproviders/afpacketudpip/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "afpacketudpip.go",
         "fnv1acheap.go",
         "internallink.go",
+        "neighbors.go",
         "mmsg.go",
         "ptplink.go",
         "udpconnection.go",
