create segment registrar interfaces and initialize them in the main

--- a/control/beacon/BUILD.bazel
+++ b/control/beacon/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "chain_checker.go",
         "db.go",
         "policy.go",
+        "registration.go",
         "selection_algo.go",
         "store.go",
     ],
@@ -23,6 +24,7 @@ go_library(
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/scrypto/signed:go_default_library",
         "//pkg/segment:go_default_library",
+        "//private/path/pathpol:go_default_library",
         "//private/segment/segverifier:go_default_library",
         "//private/segment/verifier:go_default_library",
         "//private/trust:go_default_library",
